# chatbot_mini_v2

./: .gitignore  README.md
backend/: pyproject.toml  test.py
backend/app/: dldb.py  main.py
backend/app/api/: debug.py  documents.py  query.py
backend/app/core/: global_state.py  settings.py
backend/app/schemas/: document.py  query.py
backend/app/services/: advanced_retrieved.py  chat_history.py  chunking_service.py  embedding.py  llm_client.py  milvus_store.py  minio_store.py  neo4j_store.py  pdf_ingest.py  rag_pipeline.py  rerank.py  retrieval_services.py  router.py
backend/app/services/chucking/: hierarchical_chunker.py  sentence_chunker.py  token_chunker.py
backend/app/utils/: split_sentence.py
backend/static/css/: style.css
backend/static/js/: chat.js  documents.js  main.js  utils.js
backend/templates/: index.html
docs/: DETAILED_GUIDE.md
infra/: docker-compose.yml
