[project]
name = "ai-pdf-rag"
version = "0.1.0"
description = "PDF RAG with local embedding & rerank, Neo4j, external LLM"
requires-python = ">=3.10"

dependencies = [
  # Web
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  # PDF parsing
  "pymupdf>=1.23",
  # Vector DB & Graph
  "neo4j>=5.15.0",
  # Tokenizer / NLP
  "transformers>=4.39",
  "sentencepiece",
  # Local embedding & rerank
  "FlagEmbedding>=1.2.10",
  # Utils
  "tqdm",
  "openai>=2.15.0",
  "rank-bm25>=0.2.2",
  "arize-phoenix>=12.29.0",
  "openinference-instrumentation-openai>=0.1.41",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-exporter-otlp>=1.39.1",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
]